--- a/css/index.css
+++ b/css/index.css
@@ -41,6 +41,9 @@
     opacity: 0;
     transition: .3s;
 }
+.hrtCk{
+    cursor: pointer !important;
+}
 
 .lgdp:hover .bkmk_1, .lgdp:hover .bkmk_2{
     opacity: 1;
