--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,9 +1,3 @@
-#scoll_overlay{
-    top: 113px;
-    left: 0px;
-    transition: ease-in-out 1s;
-}
-
 .caroItem_1{
     transform: scale(0.4) rotate(-24deg) translate(-70px, 330px) !important;
     transition: transform 1s ease-in-out 1s;
@@ -11,4 +5,27 @@
 .caroItem_2{
     transform: scale(0.3) rotate(-12deg) translate(-250px, 340px) !important;
     transition: transform 1s ease-in-out 1s;
+}
+
+.carousel-caption{
+    bottom: 50px;
+}
+
+@media (min-width: 0px){
+    #scoll_overlay{
+        top: 118px;
+        left: 0px;
+        transition: ease-in-out 1s;
+    }
+}
+@media (min-width: 576px){
+    .modal-dialog {
+        max-width: 700px;
+        height: 400px;
+    }
+}
+@media (min-width: 1200px){
+    #scoll_overlay{
+        top:   126px;
+    }
 }
