--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,7 @@
 /* FOOTER */
 footer {
-  background-color: #DFCCBD;
+  /* background-color: #DFCCBD; */
+  background-color: #ff8425cc;
   padding: 30px;
   /* height: 200px; */
 }
