--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
 header {
-    background-color: #DFCCBD;
+    /* background-color: #DFCCBD; */
+    background-color: #ff8425cc;
     background-blend-mode: darken;
     backdrop-filter: blur(5px);
   }
@@ -7,11 +8,15 @@ header {
 padding: 10px;
 }
 .logo {
-    background-image: url(../images/logo.svg);
+    /* background-image: url(../images/logo.svg); */
+    background-image: url(../images/svg/logoLogo.svg);
     background-repeat: no-repeat;
+    background-size: cover;
     width: 40px; 
     height: 40px;
 }
+
+
 
 @media(max-width: 1999px){
     .logo{
@@ -22,6 +27,15 @@ padding: 10px;
     .logo{
         display: inline-block;
     }
+}
+
+@keyframes spin{
+  from{
+    transform: rotateX(0deg)
+  }
+  to{
+    transform: rotateX(360deg)
+  }
 }
 
 .logo a {
