--- a/css/common.css
+++ b/css/common.css
@@ -70,6 +70,9 @@ h1, h2{
 .z-index-1{
   z-index: 1;
 }
+.z-index-2{
+  z-index: 2;
+}
 
 .opacity-3{
   opacity: 0.3;
@@ -120,6 +123,10 @@ h1, h2{
 }
 .text-orange{
   color: #FC9545;
+}
+
+.bg-0_8{
+  background-color: rgba(255,255,255,0.8);
 }
 
 
