--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,8 @@
 /* FOOTER */
 footer {
   /* background-color: #DFCCBD; */
-  background-color: #ff8425cc;
+  /* background-color: #ff8425cc; */
+  background-color: transparent;
   padding: 30px;
   /* height: 200px; */
 }
