--- a/css/index.css
+++ b/css/index.css
@@ -85,3 +85,16 @@
         width: 370px;
     }
 }
+
+.lgdp-bg{
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 15px 35px rgba(255,255,255,0.05);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.categLink{
+    padding: 25px 80px;
+}
