--- a/css/leftbar.css
+++ b/css/leftbar.css
@@ -8,6 +8,7 @@
     /* width: 140px; */
     padding-top: 15px;
     padding-bottom: 15px;
+    border-top: solid 1px rgba(255, 255, 255, 0.5);
 }
 h5{
     font-size: 16px;
@@ -18,4 +19,10 @@ h5{
 }
 .bagList{
     left: -250px !important;
+}
+
+.leftbar-s{
+    background-color: rgba(255, 255, 255, 0.95);
+    left: 0;
+    height: 560px;
 }
