--- a/css/common.css
+++ b/css/common.css
@@ -10,8 +10,6 @@ body{
   /* background-color: #E5E5E5; */
   /* background-color: rgba(0, 0, 0, 0.08); */
   /* background-color: transparent; */
-  
-
   background: #FC9545;  
   background: -webkit-linear-gradient(to bottom, #fff0dc, #FC9545);  
   background: linear-gradient(to bottom, #fff0dc, #FC9545); 
@@ -71,6 +69,9 @@ h1, h2{
 }
 .z-index-2{
   z-index: 2;
+}
+.z-index-100{
+  z-index: 100;
 }
 
 .opacity-3{
