--- a/css/common.css
+++ b/css/common.css
@@ -149,7 +149,7 @@ h1, h2{
 .bg-cloud{
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 15px 35px rgba(255,255,255,0.05);
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
