--- a/css/designer.css
+++ b/css/designer.css
@@ -36,11 +36,6 @@
 }
 
 /* ---layout---------------------- */
-@media (max-width: 414px) {
-	.h4 {
-		/* font-size: 16px; */
-	}
-}
 @media (max-width: 575.98px) {
 	.designer-content .container-sm,
 	.designer-content h6,
@@ -54,6 +49,25 @@
 		padding-right: 0;
 	}
 }
+/* ---切換修改資訊(carousel)------------ */
+
+@media (max-width:767.98px) {
+	#modify_carousel .row.carousel-item {
+		margin-right: -100%;
+	}
+}
+
+#modify_carousel .carousel-control-prev,
+#modify_carousel .carousel-control-next {
+	width: 30%;
+	bottom: 50%;
+}
+
+@media (min-width:768px) {
+	#modify_carousel .row.carousel-item {
+		display: flex;
+	}
+}
 
 /* ---上傳拖曳區塊---------------------- */
 .upload-wrapper {
@@ -65,9 +79,9 @@
 }
 
 .upload-wrapper:hover {
-	background-color: #f3f3f3 !important;
+	background-color: #fcfaf8 !important;
 }
-.upload-wrapper.dragging {
+/* .upload-wrapper.dragging {
 	background-color: #fffcf9 !important;
 }
 #upload {
@@ -82,7 +96,16 @@
 }
 #upload:focus {
 	outline: none;
+} */
+
+.preview-container {
+	background: url("../images/upload cloud.png") no-repeat center top;
 }
+
+/* dropzonejs */
+/* .dropzone .dz-preview.dz-error {
+	background-color: #ffecec !important;
+} */
 
 /* ---覆蓋common---------------------- */
 @media (min-width: 992px) {
