--- a/css/common.css
+++ b/css/common.css
@@ -6,13 +6,19 @@
     font-family: 'Noto Sans TC', sans-serif;
     /* 預選字體 ubuntu */
 }
+:root{
+  --logoColor: #FC9545;
+  --logoColor_2: #7DE290;
+  --logoColor_3: #FAD06A;
+  --alertColor: #ff4646;
+}
+
 body{
-  /* background-color: #E5E5E5; */
-  /* background-color: rgba(0, 0, 0, 0.08); */
-  /* background-color: transparent; */
-  background: #FC9545;  
-  background: -webkit-linear-gradient(to bottom, #fff0dc, #FC9545);  
-  background: linear-gradient(to bottom, #fff0dc, #FC9545); 
+  background-color:#f3eee8;  
+  /* background: var( --logoColor);   */
+  /* background: -webkit-linear-gradient(to bottom, #fff0dc, var( --logoColor));  
+  background: linear-gradient(to bottom, #fff0dc, var( --logoColor));  */
+
 }
 
 .row, .col-6, .col-md-4, .col-lg-3{
@@ -26,15 +32,13 @@ body{
   clear: both;
 }
 
-a:hover {
-  text-decoration: none !important;
-}
 a {
   color: black;
   text-decoration: none;
 }
-a:hover{
-  color: #FC9545;
+a:hover {
+  text-decoration: none !important;
+  color: var( --logoColor);
 }
 
 ul, ol, li {
@@ -85,29 +89,29 @@ h1, h2{
 /* btn */
 .btn-orange{
   color: white;
-  background-color: #FC9545;
+  background-color: var( --logoColor);
 }
 .btn-orange:hover{
   color: white;
   background-color: #ff892f;
 }
 .btn-outline-orange{
-  color: #FC9545;
+  color: var( --logoColor);
   background-color: transparent;
   border: solid 1px;
-  border-color: #FC9545;
+  border-color: var( --logoColor);
 }
 .btn.btn-outline-orange:hover{
   color: white;
-  background-color: #FC9545;
+  background-color: var( --logoColor);
   border: solid 1px;
-  border-color: #FC9545;
+  border-color: var( --logoColor);
 }
 .btn.btn-outline-orange.active{
   color: white;
-  background-color: #FC9545;
+  background-color: var( --logoColor);
   border: solid 1px;
-  border-color: #FC9545;
+  border-color: var( --logoColor);
 }
 .btn.btn-outline-orange.disabled{
   color: rgba(0, 0, 0, 0.4);
@@ -116,71 +120,70 @@ h1, h2{
   border-color:rgba(0, 0, 0, 0.4);
 }
 .btn-light:hover {
-  color: #FC9545;
+  color: var( --logoColor);
   background-color: white;
-  border-color: #FC9545;
+  border-color: var( --logoColor);
 }
 .btn-outline-color2{
-  color: #FC9545;
+  color: var( --logoColor);
   background-color: transparent;
-  border-color: #7DE290;
+  border-color: var( --logoColor_2);
 }
 .btn.btn-outline-color2:hover{
   color: white;
-  background-color:#7DE290;
+  background-color:var( --logoColor_2);
   border: solid 1px;
-  border-color: #7DE290;
+  border-color: var( --logoColor_2);
 }
 .bg-white-95{
   background-color: rgba(255, 255, 255, 0.98);
 }
 .bg-logoColor{
-  background-color: #FC9545;
+  background-color: var( --logoColor);
 }
 .bg-logoColor-2{
-  background-color: #7DE290;
+  background-color: var( --logoColor_2);
 }
 .bg-pinkLight{
   background-color:#FFD6D6;
 }
 .bg-yellow {
-  background: #FFCD00;
+  background: var( --logoColor_3);
 }
 .bg-cloud{
   background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 15px 35px rgba(255,255,255,0.05);
-  /* backdrop-filter: blur(10px); */
   border: 1px solid rgba(255, 255, 255, 0.25);
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
 }
 .bg-0_8{
   background-color: rgba(255,255,255,0.9);
-  backdrop-filter: blur(3px);
+  /* backdrop-filter: blur(3px); */
 }
 .text-alert{
-  color: #ff4646;
+  color: var( --alertColor);
 }
 .text-orange{
-  color: #FC9545;
+  color: var( --logoColor);
 }
 .text-color2{
-  color: #7DE290;
+  color: var( --logoColor_2);
 }
 .badge-orange{
-  color: #FC9545;
+  color: var( --logoColor);
   background-color: transparent;
 }
 .badge-orange.active{
   color: #FFFFFF;
-  background-color: #FC9545;
+  background-color: var( --logoColor);
 }
 .badge-orange:hover{
   color: #FFFFFF;
-  background-color: #FC9545;
+  background-color: var( --logoColor);
 }
 .badge-orange.active:hover{
-  color: #FC9545;
+  color: var( --logoColor);
   background-color: #FFFFFF;
 }
 
@@ -281,6 +284,9 @@ h1, h2{
   }
 }
 
+.mg-70 { 
+  margin-top: 70px;
+}
 .dropdown-menu {
   border: 0;
 }
