--- a/css/footer.css
+++ b/css/footer.css
@@ -7,12 +7,12 @@ footer {
   /* height: 200px; */
 }
 footer h4{
-  color: #fff;
+  color: #000;
   font-weight: 600;
   font-size: 14px;
 }
 footer a{
-  color: #fff;
+  color: #000;
   font-weight: 400;
   font-size: 14px;
 }
