--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,7 @@ header {
     /* background-color: #ff8425cc; */
     background-color: transparent;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
   }
 .sidebar{
 padding: 10px;
@@ -70,7 +71,7 @@ padding: 15px;
 .menuBurger, .menuBurger-L {
     width: 20px;
     height: 2px;
-    background-color: white;
+    background-color: var( --logoColor);
     border-radius: 5px;
     transition: all .3s ease-in-out;
   }
@@ -80,7 +81,7 @@ padding: 15px;
     position: absolute;
     width: 15px;
     height: 2px;
-    background-color: white;
+    background-color: var( --logoColor);
     border-radius: 5px;
     transition: all .3s ease-in-out;
   }
@@ -89,7 +90,7 @@ padding: 15px;
     position: absolute;
     width: 15px;
     height: 2px;
-    background-color: white;
+    background-color: var( --logoColor);
     border-radius: 5px;
     transform: translate(5px , -7px);
     transition: all .3s ease-in-out;
@@ -100,7 +101,7 @@ padding: 15px;
     position: absolute;
     width: 10px;
     height: 2px;
-    background-color: white;
+    background-color: var( --logoColor);
     border-radius: 5px;
     transition: all .3s ease-in-out;
   }
@@ -109,7 +110,7 @@ padding: 15px;
     position: absolute;
     width: 10px;
     height: 2px;
-    background-color: white;
+    background-color: var( --logoColor);
     border-radius: 5px;
     transform: translate(10px , 7px);
     transition: all .3s ease-in-out;
@@ -149,10 +150,17 @@ padding: 15px;
     top: 65px; 
     margin:0px -15px; 
     background: rgba(255, 255, 255, 0.95);
-    backdrop-filter: blur(5px);
   }
 
-  .menulist:hover path{
-    fill: #FAAF6A;
+  .menulist:hover path {
+    fill: var( --logoColor);
+  }
+  .menulist:hover #quesDot{
+    fill: white;
+  }
+  .head_icon:hover .headIcon path{
+    fill: var( --logoColor);
+    fill-opacity: 1;
+    transition: all .2s ease-in;
   }
   
