--- a/css/search.css
+++ b/css/search.css
@@ -1,9 +1,9 @@
 [aria-expanded="false"] .icon-open {
-  transition: transform .5s ease-in;
+  transition: transform .3s ease-in;
 }
 [aria-expanded="true"] .icon-open {
   transform: rotate(180deg);
-  transition: transform .5s ease-out;
+  transition: transform .3s ease-out;
 }
 
 @media(min-width:0){
@@ -25,8 +25,8 @@
   }
 }
 .list-group-item.active {
-  background-color: #FC9545;
-  border-color: #FC9545;
+  background-color: var( --logoColor);
+  border-color: var( --logoColor);
 }
 .list-group-item {
   background-color: transparent;
@@ -39,7 +39,7 @@
 }
 .page-link {
   line-height: 0;
-  color: #fff0dc;
+  color: #000000;
   background-color: transparent;
   border: 0;
 }
@@ -49,4 +49,26 @@
   text-decoration: none;
   background-color: transparent;
   border-color: #dee2e6;
+}
+.page-link:hover #next_page, .page-link:hover #pre_page{
+  fill: var( --logoColor_2);
+}
+.hitTag{
+  color: var( --logoColor);
+  background-color: #ffffff;
+  border: solid 1px;
+  border-color: var( --logoColor);
+  padding: .375rem .75rem;
+}
+.hitTag:hover{
+  color: white;
+  background-color: var( --logoColor);
+  border: solid 1px;
+  border-color: var( --logoColor);
+}
+.hitTag.active{
+  color: white;
+  background-color: var( --logoColor);
+  border: solid 1px;
+  border-color: var( --logoColor);
 }
