--- a/css/material-icon.css
+++ b/css/material-icon.css
@@ -50,4 +50,4 @@
 
 .material-icons.pink { color: #FF9292; }
 .material-icons.white { color: #ffffff; }
-.material-icons.orange {color: #FC9545;}
+.material-icons.orange {color: var( --logoColor);}
