--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 .pdClass span{
     background-size: cover;
+    background-position: center center;
     font-size: 32px;
 }
 .pdClass:hover .mask{
@@ -53,11 +54,24 @@
 
 @media(min-width: 0){
     .pdClass span{
-        width: 240px;
-        line-height: 80px;
+        width: 100%;
+        /* line-height: 80px; */
         border-radius: 0.5rem;
+        margin-left: 5px;
+        margin-right: 5px;
         /* margin: .5rem; */
         /* margin: 1px; */
+    }
+    .logoDpSm img{
+        width: 100px;
+    }
+}
+@media(min-width: 500px){
+    .pdClass span{
+        line-height: 80px;
+    }
+    .logoDpSm img{
+        width: 137px;
     }
 }
 @media(min-width: 768px){
@@ -86,5 +100,5 @@
     }
 }
 .categLink{
-    padding: 25px 80px;
+    padding: 25px 20%;
 }
