--- a/css/account.css
+++ b/css/account.css
@@ -27,10 +27,16 @@
     .bmlogo{
         width: 98%;
     }
+    .bmlogo img{
+        width: 110px;
+    }
 }
 @media(min-width: 576px){
     .bmlogo{
         width: 253px;
+    }
+    .bmlogo img{
+        width: 140px;
     }
 }
 @media(min-width: 768px){
