--- a/css/search.css
+++ b/css/search.css
@@ -11,11 +11,17 @@
       width: 100%;
       height: 200px;
   }
+  #tabFood, #tabClothes, #tabLiving, #tabTransport, #tabEdu, #tabEntertain{
+    padding: 0.3rem;
+  }
 }
 @media(min-width: 768px){
   .logoCard{
       width: 100%;
       height: 100%;
+  }
+  #tabFood, #tabClothes, #tabLiving, #tabTransport, #tabEdu, #tabEntertain{
+    padding: .75rem 1.25rem;
   }
 }
 @media(min-width: 992px){
@@ -58,7 +64,6 @@
   background-color: #ffffff;
   border: solid 1px;
   border-color: var( --logoColor);
-  padding: .375rem .75rem;
 }
 .hitTag:hover{
   color: white;
@@ -72,3 +77,4 @@
   border: solid 1px;
   border-color: var( --logoColor);
 }
+
