--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,11 @@
 }
 :root{
   --logoColor: #FC9545;
+  --logoColor_ob_0: hsla(26, 97%, 63%, 0.9);
+  --logoColor_hard: #fb6f04;
+  --logoColor_light: #fdc59b;
   --logoColor_2: #7DE290;
+  --logoColor_2_hard: #2ed14c;
   --logoColor_3: #FAD06A;
   --alertColor: #ff4646;
 }
@@ -33,7 +37,7 @@ body{
 }
 
 a {
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 a:hover {
@@ -86,34 +90,38 @@ h1, h2{
   left: 0;
 }
 
+.filter-gray{
+  filter: grayscale(100%);
+}
+
 /* btn */
-.btn-orange{
-  color: white;
+.btn-logoColor{
+  color: #FFFFFF;
   background-color: var( --logoColor);
 }
-.btn-orange:hover{
-  color: white;
-  background-color: #ff892f;
+.btn-logoColor:hover{
+  color: #FFFFFF;
+  background-color: var(--logoColor_hard);
 }
-.btn-outline-orange{
+.btn-outline-logoColor{
   color: var( --logoColor);
   background-color: transparent;
   border: solid 1px;
   border-color: var( --logoColor);
 }
-.btn.btn-outline-orange:hover{
-  color: white;
+.btn.btn-outline-logoColor:hover{
+  color: #FFFFFF;
   background-color: var( --logoColor);
   border: solid 1px;
   border-color: var( --logoColor);
 }
-.btn.btn-outline-orange.active{
-  color: white;
+.btn.btn-outline-logoColor.active{
+  color: #FFFFFF;
   background-color: var( --logoColor);
   border: solid 1px;
   border-color: var( --logoColor);
 }
-.btn.btn-outline-orange.disabled{
+.btn.btn-outline-logoColor.disabled{
   color: rgba(0, 0, 0, 0.4);
   background-color: transparent;
   border: solid 1px;
@@ -121,21 +129,21 @@ h1, h2{
 }
 .btn-light:hover {
   color: var( --logoColor);
-  background-color: white;
+  background-color: #FFFFFF;
   border-color: var( --logoColor);
 }
-.btn-outline-color2{
-  color: mediumseagreen;
+.btn-outline-logoColor-2{
+  color: var(--logoColor_2_hard);
   background-color: transparent;
   border-color: var( --logoColor_2);
 }
-.btn.btn-outline-color2:hover{
-  color: white;
+.btn.btn-outline-logoColor-2:hover{
+  color: #FFFFFF;
   background-color:var( --logoColor_2);
   border: solid 1px;
   border-color: var( --logoColor_2);
 }
-.bg-white-95{
+.bg-#FFFFFF-95{
   background-color: rgba(255, 255, 255, 0.98);
 }
 .bg-logoColor{
@@ -144,10 +152,7 @@ h1, h2{
 .bg-logoColor-2{
   background-color: var( --logoColor_2);
 }
-.bg-pinkLight{
-  background-color:#FFD6D6;
-}
-.bg-yellow {
+.bg-logoColor-3 {
   background: var( --logoColor_3);
 }
 .bg-cloud{
@@ -167,24 +172,24 @@ h1, h2{
 .text-orange{
   color: var( --logoColor);
 }
-.text-color2{
-  color: var( --logoColor_2);
+.text-logoColor-2{
+  color: var( --logoColor_2_hard);
 }
-.badge-orange{
-  color: var( --logoColor);
+.badge-logoColor{
+  color: var(--logoColor);
   background-color: transparent;
 }
-.badge-orange.active{
+.badge-logoColor.active{
   color: #FFFFFF;
-  background-color: var( --logoColor);
+  background-color: var(--logoColor);
 }
-.badge-orange:hover{
+.badge-logoColor:hover{
   color: #FFFFFF;
-  background-color: var( --logoColor);
+  background-color: var(--logoColor_hard);
 }
-.badge-orange.active:hover{
-  color: var( --logoColor);
-  background-color: #FFFFFF;
+.badge-logoColor.active:hover{
+  color: var(--logoColor_hard);
+  background-color: var( --logoColor_light);
 }
 
 
@@ -204,7 +209,7 @@ h1, h2{
   background: rgba(255, 255, 255, 0.4);
 }
 .toTop-arrow:hover{
-  background: #ff8425cc;
+  background: var(--logoColor);
 }
 
 .toTop-arrow.showw {
@@ -230,7 +235,7 @@ h1, h2{
   width: 16px;
   height: 3px;
   border-radius: 3px;
-  background: #ff8425cc;
+  background: var(--logoColor_hard);
   content: "";
 }
 
